--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ pilot: false
 # Most workshops don't use extra pages. More information about extra
 # pages are included in the README:
 # https://github.com/carpentries/workshop-template#creating-extra-pages
-title: "Data carpentry training in Dire Dawa University"
+title: "Data Carpentry Training Organized by DDUIOT,GAO in Dire Dawa University"
 
 #------------------------------------------------------------
 # Incubator workshop settings (only relevant for workshops teaching a lesson
